# safe-fetch

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
docker/: Dockerfile  build.sh  entrypoint.py
docs/: SCOPE.md
src/safe_fetch/: __init__.py  __main__.py  claude_md_snippet.md  cli.py  installer.py  sanitizer.py  search.py  search_setup.py
src/safe_fetch/data/commands/: edit-hook.md  edit-settings.md  edit-skill.md  save-memory.md  save-rule.md
src/safe_fetch/data/hooks/: injection-gate-agent.sh  injection-gate-bash.sh  injection-gate-webfetch.sh  injection-gate-write-edit.sh
src/safe_fetch/data/snippets/: claude_md.md
tests/: test_docker_entrypoint.py  test_envelope_breakout.py  test_injection_gate_bash_hook.py  test_installer.py  test_safe_fetch_cli.py  test_safe_fetch_live_smoke.py  test_sanitizer.py  test_search.py  test_search_cli.py  test_search_setup.py  test_self_test_attack_page.py
tests/fixtures/: ATTRIBUTION.md  attack-page.html
