[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-fetch"
version = "0.1.2"
description = "Docker-isolated URL fetcher + Layer-2 prompt-injection sanitizer for LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Sharky", email = "51028592+sharkyger@users.noreply.github.com" },
]
keywords = ["prompt-injection", "llm-security", "claude-code", "ai-security", "sanitizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Exact-pin to match docker/Dockerfile so the host-side install and
    # the in-container install resolve to the same parsed-tree behavior.
    # Dependabot tracks bumps; manual PRs update Dockerfile in lockstep.
    #
    # lxml 6.1.1 closes PYSEC-2026-87 (fix landed in 6.1.0); 5.x has no
    # back-port. bs4 4.14.3 is latest stable + past freshness hold.
    "beautifulsoup4==4.14.3",
    "lxml==6.1.1",
]

[project.urls]
Homepage = "https://github.com/sharkyger/safe-fetch"
Issues = "https://github.com/sharkyger/safe-fetch/issues"
Source = "https://github.com/sharkyger/safe-fetch"
"Companion: claude-code hooks" = "https://github.com/sharkyger/claude-code-prompt-injection-gate"

[project.scripts]
safe-fetch = "safe_fetch.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safe_fetch = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B", "UP", "SIM", "PTH"]
ignore = [
    "T201",   # CLI uses print
    "S603",   # subprocess args are reviewed
    "S607",   # partial paths intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is fine in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
files = ["src/safe_fetch", "docker"]
check_untyped_defs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.bandit]
# B101 — assert is fine outside tests too.
# Inline `# nosec` markers are preferred for findings that need
# per-call justification (B108 docker tmpfs spec in cli.py;
# B613 sanitizer regex pattern in sanitizer.py).
skips = ["B101"]
exclude_dirs = ["tests"]
